--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
+    --font-family: 'Inter', sans-serif;
+    --second-family: 'Roboto', sans-serif;
+    font-family: --font-family, --second-family, sans-serif;
+
+    /* line-height: 1.5;
     font-weight: 400;
 
     color-scheme: light dark;
@@ -10,9 +17,10 @@
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    -moz-osx-font-smoothing: grayscale; */
 }
 
+/*
 a {
     font-weight: 500;
     color: #646cff;
@@ -65,4 +73,4 @@ button:focus-visible {
     button {
         background-color: #f9f9f9;
     }
-}
+} */
